Skip to content

libvlc_video_set_scale(p_mi, f_factor)

If i call this function in p_mi is not playing (after creation) then i receive: Access violation at address 6A305ABC in module libvlc.dll. Read of address 00000000. If call this function during playing then this error is not exists but this function not working property. Scale not changed, etc.

In attachement I send proposed version of this function.

To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information