Fix libvlc video functions when there is no input (fixes #3812)